--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -14,5 +14,5 @@ pipelines:
         # trigger: manual  # uncomment to have a manual step
         image: atlassian/pipelines-awscli
         script:
-          - aws deploy push --application-name $APPLICATION_NAME --s3-location s3://$S3_BUCKET/$AWS_SECRET_ACCESS_KEY --ignore-hidden-files
-          - aws deploy create-deployment --application-name $APPLICATION_NAME --s3-location bucket=$S3_BUCKET,key=$AWS_SECRET_ACCESS_KEY,bundleType=zip --deployment-group-name $DEPLOYMENT_GROUP_NAME
+          - aws deploy push --application-name GrubCodeDeploy --s3-location s3://ap-deployment/OrEbOypoVj0ACzYkN4rfkiTsAIu0ihJXvsQt8RNT --ignore-hidden-files
+          - aws deploy create-deployment --application-name $GrubCodeDeploy --s3-location bucket=ap-deployment,key=OrEbOypoVj0ACzYkN4rfkiTsAIu0ihJXvsQt8RNT,bundleType=zip --deployment-group-name GrubDG1
