--- a/src/package.json
+++ b/src/package.json
@@ -11,6 +11,8 @@
     "https": "^1.0.0",
     "ip": "^1.1.5",
     "magic-globals": "^0.9.1",
+    "path": "^0.12.7",
+    "pug": "^2.0.4",
     "winston": "^3.2.1"
   },
   "devDependencies": {},
