--- a/src/package.json
+++ b/src/package.json
@@ -11,11 +11,16 @@
     "https": "^1.0.0",
     "ip": "^1.1.5",
     "magic-globals": "^0.9.1",
+    "nodemon": "^1.19.1",
     "path": "^0.12.7",
     "pug": "^2.0.4",
     "winston": "^3.2.1"
   },
   "devDependencies": {},
+  "nodemonConfig":{
+    "ignore":["logs/*"],
+    "delay":"2500"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
