--- a/src/package.json
+++ b/src/package.json
@@ -8,6 +8,7 @@
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
+    "googleapis": "^40.0.1",
     "https": "^1.0.0",
     "ip": "^1.1.5",
     "magic-globals": "^0.9.1",
@@ -17,8 +18,10 @@
     "winston": "^3.2.1"
   },
   "devDependencies": {},
-  "nodemonConfig":{
-    "ignore":["logs/*"]
+  "nodemonConfig": {
+    "ignore": [
+      "logs/*"
+    ]
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
