intermediate commit , setup dev machine succefull

--- a/src/.env
+++ b/src/.env
@@ -1,5 +1,6 @@
 # @author : Ayush Pratap Singh
 HTTPS_PORT=8081
 APP_ENV="dev"
-DB_URL="mongodb+srv://ap-user-1:KvKaRx9WHeTwxeSR@grubcluster0-evixi.gcp.mongodb.net/grub?retryWrites=true&w=majority"
+# DB_URL="mongodb+srv://ap-user-1:KvKaRx9WHeTwxeSR@grubcluster0-evixi.gcp.mongodb.net/grub?retryWrites=true&w=majority"
+DB_URL="mongodb://127.0.0.1:27017/grub"
 SESSION_SECRET="EYGxYyg3mUfWz3ms2z7XyqFmCIuBCdRg"
