deployed on aws beanstalk

--- a/src/.gitignore
+++ b/src/.gitignore
@@ -1,3 +1,7 @@
 logs/*
 node_modules/*
 *.code-workspace
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
