--- a/src/.env
+++ b/src/.env
@@ -1,3 +1,5 @@
 HTTPS_PORT=8081
 APP_ENV=dev
 TEST_NAME=Pratap
+DB_URL=mongodb+srv://ap-user-1:<password>@grubcluster0-evixi.gcp.mongodb.net/test?retryWrites=true&w=majority
+SESSION_SECRET=hello
