--- a/src/package.json
+++ b/src/package.json
@@ -6,13 +6,17 @@
   "private": true,
   "dependencies": {
     "app-root-path": "^2.2.1",
+    "connect-mongo": "^3.0.0",
+    "cookie-parser": "^1.4.4",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
+    "express-session": "^1.16.2",
     "fs": "0.0.1-security",
     "googleapis": "^40.0.1",
     "https": "^1.0.0",
     "ip": "^1.1.5",
     "magic-globals": "^0.9.1",
+    "mongoose": "^5.6.3",
     "nodemon": "^1.19.1",
     "path": "^0.12.7",
     "pug": "^2.0.4",
