--- a/src/package.json
+++ b/src/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "dependencies": {
     "app-root-path": "^2.2.1",
-    "bcrypt": "^3.0.6",
+    "bcryptjs": "^2.4.3",
     "connect-mongo": "^3.0.0",
     "cookie-parser": "^1.4.4",
     "dotenv": "^8.0.0",
