--- a/src/package.json
+++ b/src/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "app-root-path": "^2.2.1",
     "bcryptjs": "^2.4.3",
+    "check-types": "^8.0.3",
     "connect-mongo": "^3.0.0",
     "cookie-parser": "^1.4.4",
     "dotenv": "^8.0.0",
@@ -22,6 +23,7 @@
     "nodemon": "^1.19.1",
     "path": "^0.12.7",
     "pug": "^2.0.4",
+    "socket.io": "^2.2.0",
     "winston": "^3.2.1"
   },
   "devDependencies": {
