--- a/src/package.json
+++ b/src/package.json
@@ -24,7 +24,8 @@
     "path": "^0.12.7",
     "pug": "^2.0.4",
     "socket.io": "^2.2.0",
-    "winston": "^3.2.1"
+    "winston": "^3.2.1",
+    "winston-daily-rotate-file": "^3.9.0"
   },
   "devDependencies": {
     "@google-cloud/nodejs-repo-tools": "^3.3.0"
