--- a/src/.env
+++ b/src/.env
@@ -1,4 +1,4 @@
 HTTPS_PORT=8081
-APP_ENV=prod
+APP_ENV=dev
 DB_URL=mongodb+srv://ap-user-1:KvKaRx9WHeTwxeSR@grubcluster0-evixi.gcp.mongodb.net/grub?retryWrites=true&w=majority
 SESSION_SECRET=hello
