--- a/src/package.json
+++ b/src/package.json
@@ -12,6 +12,7 @@
     "cookie-parser": "^1.4.4",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
+    "express-favicon": "^2.0.1",
     "express-session": "^1.16.2",
     "fs": "0.0.1-security",
     "googleapis": "^40.0.1",
@@ -42,7 +43,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
   "author": "Ayush Pratap Singh",
   "license": "ISC"
