intermediate commit , updated gitignore

--- a/src/.gitignore
+++ b/src/.gitignore
@@ -1,6 +1,9 @@
 logs/*
 node_modules/*
-*.code-workspace
+launch.json
+settings.json
+../*.code-workspace
+../.vscode
 # Elastic Beanstalk Files
 .elasticbeanstalk/*
 !.elasticbeanstalk/*.cfg.yml
