--- a/src/package.json
+++ b/src/package.json
@@ -15,18 +15,13 @@
     "express-favicon": "^2.0.1",
     "express-session": "^1.16.2",
     "fs": "0.0.1-security",
-    "googleapis": "^40.0.1",
-    "ip": "^1.1.5",
-    "is-empty": "^1.2.0",
-    "is-undefined": "^1.0.10",
     "magic-globals": "^0.9.1",
     "mongoose": "^5.6.3",
     "nodemon": "^1.19.1",
     "path": "^0.12.7",
     "pug": "^2.0.4",
     "socket.io": "^2.2.0",
-    "winston": "^3.2.1",
-    "winston-daily-rotate-file": "^3.9.0"
+    "winston": "^3.2.1"
   },
   "devDependencies": {
     "@google-cloud/nodejs-repo-tools": "^3.3.0",
